Revert "adding my own stuffs"
This reverts commit 15ee9d817e30ad278b25a2b9b533f175674d3e20.

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #005C97;
-$secondary-color: #363795;
+$primary-color: #02aab0;
+$secondary-color: #00cdac;
 
 $white-color: #fff;
 
